添加76-最小覆盖子串.

--- a/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
+++ b/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
@@ -31,7 +31,7 @@ public int slidingWindowTemplate(String[] a, ...) {
   // r: 右边指针
   // cond: 记录当前条件，具体根据题目要求来定义
   // ans：存放结果
-  int lo, cond, ans;
+  int l, cond, ans;
   for (int r = 0; r < a.lenght; ++hi) {
     // 更新元素在散列中的数量
     hash[[a[r]]]--;
@@ -39,8 +39,8 @@ public int slidingWindowTemplate(String[] a, ...) {
     if (hash[a[r]] == ...) {
       cond++;
     }
-   	// 如果当前条件不满足，移动左指针直到条件满足
-    while (cond > K || ...) {
+   	// 如果当前条件满足，移动左指针直到条件不满足
+    while (l <= r && cond) {
       if (...) {
         cond--;
       }
