添加76-最小覆盖子串.

--- a/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
+++ b/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
@@ -22,35 +22,35 @@
 模板思路： 保证右指针每次往前移动一格，每次移动都会有新的一个元素进入窗口，这时条件可能就会发生改变，然后根据当前条件来决定左指针是否移动，以及移动多少格。
 
 ```java
-public int slidingWindowTemplate(String[] a, ...) {
-  // 申请一个散列用于记录窗口中具体元素的个数情况
-  // 这里用数组的形式呈现，也可以考虑使用其他数据结构
-  int[] hash = new int[256];
-  
-  // l: 左边指针
-  // r: 右边指针
-  // cond: 记录当前条件，具体根据题目要求来定义
-  // ans：存放结果
-  int l, cond, ans;
-  for (int r = 0; r < a.lenght; ++hi) {
-    // 更新元素在散列中的数量
-    hash[[a[r]]]--;
-    // 根据窗口的变更结果来改变条件值
-    if (hash[a[r]] == ...) {
-      cond++;
+/* 滑动窗口算法框架 */
+void slidingWindow(string s, string t) {
+    unordered_map<char, int> need, window;
+    for (char c : t) need[c]++;
+    
+    int left = 0, right = 0;
+    int valid = 0; 
+    while (right < s.size()) {
+        // c 是将移入窗口的字符
+        char c = s[right];
+        // 右移窗口
+        right++;
+        // 进行窗口内数据的一系列更新
+        ...
+
+        /*** debug 输出的位置 ***/
+        printf("window: [%d, %d)\n", left, right);
+        /********************/
+        
+        // 判断左侧窗口是否要收缩
+        while (window needs shrink) {
+            // d 是将移出窗口的字符
+            char d = s[left];
+            // 左移窗口
+            left++;
+            // 进行窗口内数据的一系列更新
+            ...
+        }
     }
-   	// 如果当前条件满足，移动左指针直到条件不满足
-    while (l <= r && cond) {
-      if (...) {
-        cond--;
-      }
-      hash[a[l]]++;
-      l++;
-    }
-    // 更新结果
-    ans = 
-  }
-  return ans;
 }
 
 ```
