--- a/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
+++ b/src/main/java/com/jsgygujun/code/template/sliding_window/滑动窗口.md
@@ -17,41 +17,24 @@
 
 ## 解题思路与模版
 
-滑动窗口的关键在于控制前后指针的移动来控制窗口，这样的移动是有条件的，也就是要想清楚在什么养的情况下移动，在什么养的情况下保持不变。
+滑动窗口的关键在于控制前后指针的移动来控制窗口，这样的移动是有条件的，也就是要想清楚在什么样的情况下移动，在什么样的情况下保持不变。
 
 模板思路： 保证右指针每次往前移动一格，每次移动都会有新的一个元素进入窗口，这时条件可能就会发生改变，然后根据当前条件来决定左指针是否移动，以及移动多少格。
 
 ```java
 /* 滑动窗口算法框架 */
-void slidingWindow(string s, string t) {
-    unordered_map<char, int> need, window;
-    for (char c : t) need[c]++;
-    
+void slidingWindowTemplate(String s) {
     int left = 0, right = 0;
-    int valid = 0; 
-    while (right < s.size()) {
-        // c 是将移入窗口的字符
-        char c = s[right];
-        // 右移窗口
-        right++;
-        // 进行窗口内数据的一系列更新
-        ...
-
-        /*** debug 输出的位置 ***/
-        printf("window: [%d, %d)\n", left, right);
-        /********************/
-        
-        // 判断左侧窗口是否要收缩
-        while (window needs shrink) {
-            // d 是将移出窗口的字符
-            char d = s[left];
-            // 左移窗口
+    while (right < s.length()) {
+        char c = s.charAt(right); // 「c」是将要移入窗口的字符
+        // 进行窗口内数据的更新
+        while (窗口需要缩小的条件) {
+            char d = s.charAt(left);
             left++;
-            // 进行窗口内数据的一系列更新
-            ...
+            // 进行窗口内数据的更新
         }
+        right++;
     }
 }
-
 ```
 
